--- a/HelloDoc/Views/AdminDash/CreateRequest.cshtml
+++ b/HelloDoc/Views/AdminDash/CreateRequest.cshtml
@@ -24,7 +24,7 @@
         </div>
 
         <div id="FormOfPatientRequest" class="container-sm mt-3 p-3 gx-4 mb-3  bg-white shadow">
-            <form class="form-floating" method="post" enctype="multipart/form-data">
+            <form class="form-floating" method="post" asp-action="CreateRequest">
                 <!-- Patient Information -->
                 <div class="row gx-4">
                     <h4 class="fw-semibold text-body">Patient</h4>
@@ -164,6 +164,7 @@
                     </h4>
                     <div class="form-floating my-3 control-group col-12">
                         <textarea class="form-control"
+                        asp-for="AdminNote"
                                   placeholder="Leave a comment here"
                                   id="floatingTextarea2"
                                   style="height: 120px"></textarea>
@@ -180,7 +181,7 @@
                     </div>
                 </div>
             </form>
-            <div asp-validation-summary="ModelOnly"></div>
+           
         </div>
     </div>
 </div>
