--- a/HelloDoc/Views/Request/Family_Friend_Request.cshtml
+++ b/HelloDoc/Views/Request/Family_Friend_Request.cshtml
@@ -42,7 +42,7 @@
             <div class="container-fluid ">
                 <div class="container ps-3 shadow-lg ">
                     <h4 class="pt-3 mb-4">Family/Friend Information</h4>
-                <form asp-action="Family_Friend_request" asp-controller="Request" method="post">
+                <form asp-action="Family_Friend_request" asp-controller="Request" method="post" enctype="multipart/form-data">
 
                     <div class="row">
                         <div class="col col-12 col-sm-6">
