--- a/HelloDoc/Views/AdminDash/CreateRequest.cshtml
+++ b/HelloDoc/Views/AdminDash/CreateRequest.cshtml
@@ -1,4 +1,4 @@
-﻿@model DAL.ViewModels.Patient
+﻿@model DAL.ViewModel.CreateRequest
 @{
     ViewData["Title"] = "CreateRequest";
     Layout = "~/Views/Shared/_AdminDash.cshtml";
@@ -36,7 +36,7 @@
                                id="floatingInput1"
                                placeholder="First Name" />
                         <label for="floatingInput1" class="ms-2">First Name</label>
-                        @*<span asp-validation-for="FirstName" class="text-danger " style="font-size: 11px;"></span>*@
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                         <input type="text"
@@ -45,7 +45,7 @@
                                id="floatingInput2"
                                placeholder="Last Name" />
                         <label for="floatingInput2" class="ms-2">Last Name</label>
-                        @*<span asp-validation-for="LastName" class="text-danger" style="font-size: 11px;"></span>*@
+                        <span asp-validation-for="LastName" class="text-danger"></span>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                         <input type="tel"
@@ -54,7 +54,7 @@
                                id="floatingInpu5t"
                                placeholder="PhoneNumber" />
                         <label for="floatingInput5" class="ms-2">Mobile Number</label>
-                        @*<span asp-validation-for="" class="text-danger" style="font-size: 11px;"></span>*@
+  
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                         <input type="text"
@@ -65,7 +65,7 @@
                                placeholder="name@inputtype.com"
                                onchange="CheckEmail()" />
                         <label for="floatingInput4" class="ms-2">Email</label>
-                        @*<span asp-validation-for="" class="text-danger" style="font-size: 11px;"></span>*@
+                        <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                         <input type="date"
@@ -76,7 +76,7 @@
                                id="floatingInput3"
                                placeholder="Date Of Birth" />
                         <label for="floatingInput3" class="ms-2">Date Of Birth</label>
-                        @*<span asp-validation-for="BirthDate" class="text-danger" style="font-size: 11px;">  </span>*@
+                     
                     </div>
 
                     <div class="row" id="passwordFields" style="display : none;">
@@ -86,7 +86,7 @@
                                    id="password"
                                    placeholder="Password" />
                             <label for="floatingInput" class="ms-2">Password</label>
-                            @*<span asp-validation-for="" class="text-danger" style="font-size: 11px;"></span>*@
+                           
                         </div>
 
                         <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
