--- a/HelloDoc/Views/Login/Patient_login.cshtml
+++ b/HelloDoc/Views/Login/Patient_login.cshtml
@@ -50,7 +50,7 @@
 
                 @* ---------------Back Button------------------- *@
                 <div>
-                    <a asp-action="index" asp-controller="Home" class="text-info fs-5 mt-4 back">
+                    <a asp-action="index" asp-controller="Home" class="text-info fs-5 mt-4 back" style="text-decoration:none">
                         <span class="fs-4"><</span>
                         <span> Back</span>
                     </a>
